--- a/app/src/main/res/layout/add_groups_activity.xml
+++ b/app/src/main/res/layout/add_groups_activity.xml
@@ -5,25 +5,92 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GTextMainActivity"
-    android:background="#f0f0f0">
+    android:background="@color/whitish">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/firstLinearLayout"
+    <LinearLayout android:id="@+id/firstLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/txt_Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="#00000c"
             android:padding="10dp"
             android:textColor="#fff"
-            android:textSize="20dp" />
+            android:background="@color/black"
+            android:textSize="15dp" />
+
+
+        <LinearLayout android:id="@+id/secondLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_GroupName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13dp"
+                android:textColor="@color/black"
+                android:padding="3dp"
+                android:text="@string/edit_message_txt"/>
+
+            <EditText android:id="@+id/edit_message_edt"
+                android:hint="@string/edit_message"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="13dp" />
+        </LinearLayout>
+
+        <LinearLayout android:id="@+id/thirdLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="3dp"
+            android:padding="3dp">
+
+            <TextView
+                android:id="@+id/txt_DescribeGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/txt_describe_grp"
+                android:textColor="@color/black"
+                android:textSize="13dp" />
+
+            <EditText android:id="@+id/edit_description"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:textSize="13dp"
+                android:gravity="top"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:id="@+id/fourthLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button android:id="@+id/btn_save"
+                android:hint="@string/btn_save"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+            <Button android:id="@+id/btn_clear"
+                android:hint="@string/btn_clear"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+            <Button android:id="@+id/btn_exit"
+                android:hint="@string/btn_exit"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
     </LinearLayout>
-
 </RelativeLayout>
