Signed-off-by: amimobenja <amimobenja08@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#ffffff</color>
     <color name="whitish">#f0f0f0</color>
     <color name="black">#030303</color>
+    <color name="greyish">#888888</color>
 </resources>
